--- a/src/style.css
+++ b/src/style.css
@@ -67,20 +67,21 @@ main section h1 {
 }
 
 /* Graph */
-#nodes rect {
+g, #nodes text {
+  pointer-events: none;
+}
+#nodes circle {
   stroke: #111;
-  stroke-width: 1px;
+  stroke-width: 5px;
+  pointer-events: auto;
 }
 #nodes text {
   font-size: 8pt;
-  fill: white;
+  fill: black;
 }
 
 #nodes .domain {
   fill: yellow;
-}
-#nodes .domain text {
-  fill: black;
 }
 #nodes .data-class {
   fill: blue;
@@ -95,6 +96,7 @@ main section h1 {
 #edges {
   stroke: #999;
   stroke-opacity: 0.6;
+  stroke-width: 3px;
 }
 
 table {
