--- a/src/style.css
+++ b/src/style.css
@@ -67,27 +67,20 @@ main section h1 {
 #tree {
   background: var(--graph-background);
   overflow: hidden;
-  position: relative;
   display: flex;
   max-width: 1600px;
   margin-left: auto;
   margin-right: auto;
 }
 
-#visualisation {
-  flex-grow: 2;
-}
-
 #visualisation svg {
-  height: 100%;
-  width: 100%;
+  padding: 1em;
 }
 
 /* Tooltip */
 .tooltip {
   background-color: var(--tooltip-background);
   padding: 1em;
-  position: relative;
   width: 20em;
   box-sizing: border-box;
 }
